[gd_scene load_steps=24 format=2]

[ext_resource path="res://samurai/sword/idle/8.png" type="Texture" id=1]
[ext_resource path="res://tower.gd" type="Script" id=2]
[ext_resource path="res://samurai/sword/attack/0.png" type="Texture" id=3]
[ext_resource path="res://samurai/sword/idle/1.png" type="Texture" id=4]
[ext_resource path="res://samurai/sword/attack/6.png" type="Texture" id=5]
[ext_resource path="res://samurai/sword/idle/9.png" type="Texture" id=6]
[ext_resource path="res://samurai/sword/idle/6.png" type="Texture" id=7]
[ext_resource path="res://samurai/sword/attack/1.png" type="Texture" id=8]
[ext_resource path="res://samurai/sword/attack/2.png" type="Texture" id=9]
[ext_resource path="res://samurai/sword/attack/3.png" type="Texture" id=10]
[ext_resource path="res://samurai/sword/idle/4.png" type="Texture" id=11]
[ext_resource path="res://samurai/sword/attack/7.png" type="Texture" id=12]
[ext_resource path="res://samurai/sword/idle/2.png" type="Texture" id=13]
[ext_resource path="res://samurai/sword/idle/0.png" type="Texture" id=14]
[ext_resource path="res://samurai/sword/idle/3.png" type="Texture" id=15]
[ext_resource path="res://samurai/sword/idle/5.png" type="Texture" id=16]
[ext_resource path="res://samurai/sword/attack/4.png" type="Texture" id=17]
[ext_resource path="res://samurai/sword/attack/8.png" type="Texture" id=18]
[ext_resource path="res://samurai/sword/attack/5.png" type="Texture" id=19]
[ext_resource path="res://samurai/sword/idle/7.png" type="Texture" id=20]
[ext_resource path="res://samurai/sword/attack/9.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 20 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 146.003

[node name="tower" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 10 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="detection_area" type="Area2D" parent="."]
position = Vector2( -2, 2 )

[node name="collision_shape" type="CollisionShape2D" parent="detection_area"]
position = Vector2( 1, 2 )
shape = SubResource( 1 )

[node name="attack_speed" type="Timer" parent="."]
autostart = true

[connection signal="attack" from="." to="." method="_on_tower_attack"]
[connection signal="idle" from="." to="." method="_on_tower_idle"]
[connection signal="area_entered" from="detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="detection_area" to="." method="_on_detection_area_area_exited"]
[connection signal="timeout" from="attack_speed" to="." method="_on_attack_speed_timeout"]
